--- a/tractor/USER/tractor.uvprojx
+++ b/tractor/USER/tractor.uvprojx
@@ -365,7 +365,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F10X_HD,USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>..\HARDWARE\LED;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USER;..\STM32F10x_FWLib\inc;..\CORE;..\HARDWARE\KEY;..\HARDWARE\TIMER;..\HARDWARE\ADC;..\HARDWARE\EXTI;..\HARDWARE\DIR;..\HARDWARE\WDG;..\HARDWARE\CAN;..\HARDWARE\gps_com;..\HARDWARE\BEEP;..\HARDWARE\navigation2;..\HARDWARE\LCD;..\HARDWARE\NRF24L01;..\HARDWARE\SPI;..\HARDWARE\WIRELESS_DATA;..\SYSTEM\capture;..\HARDWARE\DMA</IncludePath>
+              <IncludePath>..\HARDWARE\LED;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USER;..\STM32F10x_FWLib\inc;..\CORE;..\HARDWARE\KEY;..\HARDWARE\TIMER;..\HARDWARE\ADC;..\HARDWARE\EXTI;..\HARDWARE\DIR;..\HARDWARE\WDG;..\HARDWARE\CAN;..\HARDWARE\gps_com;..\HARDWARE\BEEP;..\HARDWARE\navigation2;..\HARDWARE\LCD;..\HARDWARE\NRF24L01;..\HARDWARE\SPI;..\HARDWARE\WIRELESS_DATA;..\SYSTEM\capture;..\HARDWARE\DMA;..\USER</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -422,6 +422,11 @@
               <FileName>system_stm32f10x.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\system_stm32f10x.c</FilePath>
+            </File>
+            <File>
+              <FileName>global_params.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\global_params.c</FilePath>
             </File>
           </Files>
         </Group>
